# oidc-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
.github/worksflows/: ci.yaml
src/: claims.rs  config.rs  http.rs  lib.rs  main.rs  oidc.rs  plugin.rs  server.rs  utils.rs
src/cmd/: completion.rs  create.rs  delete.rs  inspect.rs  list.rs  mcp.rs  mod.rs  token.rs
src/cmd/create/: confidential.rs  mod.rs  public.rs
src/utils/: inspect.rs  mod.rs
