[package]
name = "oidc-cli"
version = "0.1.3-rc.1"
edition = "2021"
description = "A command line tool to work with OIDC tokens"

authors = ["Jens Reimann <ctron@dentrassi.de>"]
license = "Apache-2.0"
repository = "https://github.com/ctron/oidc-cli"
categories = ["command-line-utilities", "authentication"]
keywords = ["oidc", "cli"]
readme = "README.md"
# based on clap
rust-version = "1.74"

[[bin]]
name = "oidc"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/oidc-{ target }{ binary-ext }"
pkg-fmt = "bin"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
directories = "5"
log = "0.4"
openid = "0.12"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
simplelog = "0.12"
time = { version = "0.3", features = ["serde-well-known"] }
tokio = { version = "1.36", features = ["full"] }
url = "2"

openssl = "0.10" # transient dependency, required for vendoring

[features]
vendored = [
    "openssl/vendored"
]
