[package]
name = "oidc-cli"
version = "0.6.0-rc.3"
edition = "2024"
description = "A command line tool to work with OIDC tokens"

authors = ["Jens Reimann <ctron@dentrassi.de>"]
license = "Apache-2.0"
repository = "https://github.com/ctron/oidc-cli"
categories = ["command-line-utilities", "authentication"]
keywords = ["oidc", "cli"]
readme = "README.md"
# based on edition 2024
rust-version = "1.85"

[[bin]]
name = "oidc"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/oidc-{ target }{ binary-ext }"
pkg-fmt = "bin"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
anyhow = "1"
biscuit = "0.7"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
colored_json = "5"
comfy-table = "7"
directories = "6"
humantime = "2"
log = "0.4"
open = "5"
openidconnect = "4"
oauth2 = "5"
pretty-hex = "0.4.1"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
simplelog = "0.12"
time = { version = "0.3", features = ["serde-well-known", "formatting"] }
tokio = { version = "1.36", features = ["full"] }
url = "2"

openssl = "0.10" # transient dependency, required for vendoring

[features]
vendored = [
    "openssl/vendored"
]
