[package]
name = "oidc-cli"
version = "0.7.3"
edition = "2024"
description = "A command line tool to work with OIDC tokens"

authors = ["Jens Reimann <ctron@dentrassi.de>"]
license = "Apache-2.0"
repository = "https://github.com/ctron/oidc-cli"
categories = ["command-line-utilities", "authentication"]
keywords = ["oidc", "cli"]
readme = "README.md"
# File::lock() requires 1.89
rust-version = "1.89"

[[bin]]
name = "oidc"
path = "src/main.rs"

[package.metadata.cargo-all-features]
always_include_features = ["native-tls"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/oidc-{ target }{ binary-ext }"
pkg-fmt = "bin"

[dependencies]
actix-web = "4"
anyhow = "1"
biscuit = "0.8"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
colored_json = "5"
comfy-table = "7"
directories = "6"
humantime = "2"
log = "0.4"
oauth2 = { version = "5", default-features = false, features = ["reqwest"] }
open = "5"
openidconnect = { version = "4", default-features = false, features = ["accept-rfc3339-timestamps", "reqwest"] }
pretty-hex = "0.4.1"
reqwest = { version = "0.12", default-features = false } # keep aligned with openidconnect
rmcp = { version = "2", features = ["server", "transport-io", "macros"], optional = true }
schemars = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
simplelog = "0.12"
time = { version = "0.3", features = ["serde-well-known", "formatting"] }
tokio = { version = "1.36", features = ["full"] }
url = "2"

[features]
default = ["native-tls", "mcp"]
native-tls = ["openidconnect/native-tls", "oauth2/native-tls", "reqwest/default-tls"]
rustls = ["openidconnect/rustls-tls", "oauth2/rustls-tls", "reqwest/rustls-tls"]
mcp = ["dep:rmcp", "dep:schemars"]
